Fix clicker function to toggle hiddenInfo.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Address Book</h1>
-      <h3>Please enter your information below<h3>
+      <h3>Please enter your information below</h3>
       <div id="addressBook">
         <form id="inputBox">
           <div class="form-group">
@@ -33,15 +33,15 @@
         </form>
       </div>
       <div id="createdContact">
-
-      </div>
-      <div id="template">
-        <p>Name: <span class="nameReturn"></span></p>
-        <div class="hiddenInfo">
-          <p>Address: <span class="addressReturn"></span></p>
-          <p>Phone Number: <span class="phoneReturn"></span></p>
-          <p>E-mail: <span class="emailReturn"></span></p>
+        <div id="template">
+          <h2><span class="nameReturn"></span></h2>
+          <div class="hiddenInfo">
+            <p>Address: <span class="addressReturn"></span></p>
+            <p>Phone Number: <span class="phoneReturn"></span></p>
+            <p>E-mail: <span class="emailReturn"></span></p>
+          </div>
         </div>
+
       </div>
     </div>
   </body>
